--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,41 @@
-*/node_modules
-*/*.swp
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
 *.swp
-*/[._]*.s[a-w][a-z]
-*/[._]s[a-w][a-z]
-*/*.un~
-*/Session.vim
-*/.netrwhist
-*/*~
+*.vi
+*~
+*.sass-cache
 
+# OS or Editor folders
+.DS_Store
+.cache
+.project
+.settings
+.tags
+.tmproj
+nbproject
+Thumbs.db
+tags
+
+# NPM packages folder.
+node_modules/
+
+# Brunch folder for temporary files.
+tmp/
+dist/
+
+# Brunch output folder.
+public/
+
+# Bower stuff.
+bower_components/
+
+# API Docs
+docs/api/
+
+# DotEnv
+.env
